# jobRadar

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  astro.config.mjs  docker-compose.prod.yml  eslint.config.js  fly.toml  init.md  manage.py  package-lock.json  package.json  pyproject.toml  vitest.config.ts  wrangler.jsonc
.claude/: .10x-cli-manifest.json
.github/workflows/: ai-review.yml  ci.yml
ai-toolkit/: install.js  package.json  uninstall.js
ai-toolkit/rules/: CLAUDE.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  compose.production.yaml  compose.yaml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: cover_letter.py  cv.py  health.py  me.py  scoring.py
backend/app/core/: __init__.py  config.py  rate_limit.py  security.py
backend/app/schemas/: __init__.py  ai.py  auth.py  common.py  cv.py  health.py  scoring.py
backend/app/services/: __init__.py  cover_letter.py  cv_extraction.py  scoring.py  storage.py  zai.py
backend/scripts/: pr_review.py
backend/tests/: test_contracts.py  test_cv_extraction.py  test_pr_review.py  test_zai.py
backend/tests/fixtures/: sample.diff
context/: architect-report.md  certification-forms.md
context/deployment/: deploy-plan.md
context/domain/: 01-domain-distillation.md  02-invariant-aggregate-refactor.md  03-anti-corruption-layer.md
context/foundation/: infrastructure.md  lessons.md  prd.md  review-criteria.md  roadmap.md  (+3 more)
job_radar/: asgi.py  settings.py  tests.py  urls.py  wsgi.py
(+143 files in other folders)
